--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "PROJECT_ADDRESS" : "your CM id here",
-    "DISCORD_URL" : "your discord channel webhook here", 
+    "PROJECT_ADDRESS" : "EVTSX3buKRsdvkXmHBj7Re36umxZkiXkQSNqLn7RrEZ8",
+    "DISCORD_URL" : "https://discord.com/api/webhooks/953006004579213362/Rn5ucST3d28D4CgSoXeM_VVwnYlbUTllgD_kl0CLTebNVtmbjGQwdXGo6G_MExzix4hh", 
   "DISCORD_BOT" : ""
   }
