--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
-    "name": "solana",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "@metaplex/js": "^3.5.0",
-      "@solana/web3.js": "^1.31.0",
-      "axios": "^0.24.0",
-        "discord-webhook-node": "^1.1.8",
-      "@project-serum/anchor": "^0.19.0",
-          "cheerio": "^0.22.0"
-    }
-  }
+  "name": "solana-nft-sales-bot1",
+  "version": "1.0.0",
+  "description": "THE COMPLETE GUIDE ON MAKING A SALES BOT FOR SOLANA NFT's",
+  "main": "index.js",
+  "dependencies": {
+    "@metaplex/js": "^4.12.0",
+    "@project-serum/anchor": "^0.22.1",
+    "@solana/web3.js": "^1.36.0",
+    "axios": "^0.26.1",
+    "cheerio": "^1.0.0-rc.10",
+    "discord-webhook-node": "^1.1.8"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hzcreator/solana-nft-sales-bot.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hzcreator/solana-nft-sales-bot/issues"
+  },
+  "homepage": "https://github.com/hzcreator/solana-nft-sales-bot#readme"
+}
